[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "house-robber-4"
path = "src/bin/house_robber_4/main.rs"

[[bin]]
name = "contest-15-03-25-q1"
path = "src/bin/contest_15_03_25/q1/main.rs"

[[bin]]
name = "contest-15-03-25-q2"
path = "src/bin/contest_15_03_25/q2/main.rs"

[[bin]]
name = "contest-15-03-25-q3"
path = "src/bin/contest_15_03_25/q3/main.rs"

[[bin]]
name = "repair_cars"
path = "src/bin/repair_cars/main.rs"

[[bin]]
name = "divide_array"
path = "src/bin/divide_array/main.rs"

[[bin]]
name = "str_str"
path = "src/bin/str_str/main.rs"
